--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "angular2-fontawesome": "~0.7.0",
     "bootstrap": "^4.0.0-alpha.4",
     "core-js": "^2.4.1",
+    "ng2-bs3-modal": "^0.10.4",
     "reflect-metadata": "^0.1.8",
     "rxjs": "5.0.0-beta.12",
     "systemjs": "0.19.39",
