--- a/package.json
+++ b/package.json
@@ -36,15 +36,16 @@
     "angular-in-memory-web-api": "~0.1.1",
     "angular2-cookie": "^1.2.4",
     "angular2-fontawesome": "~0.7.0",
+    "angular2-logger": "^0.5.1",
     "bootstrap": "^4.0.0-alpha.4",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "ng2-bs3-modal": "^0.10.4",
     "reflect-metadata": "^0.1.8",
     "rxjs": "5.0.0-beta.12",
+    "sarlacc-js-client": "1.0.3",
     "systemjs": "0.19.39",
-    "zone.js": "^0.6.25",
-    "sarlacc-js-client": "1.0.3"
+    "zone.js": "^0.6.25"
   },
   "devDependencies": {
     "concurrently": "^3.0.0",
