--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "rxjs": "5.0.0-beta.12",
     "sarlacc-js-client": "1.0.4",
     "systemjs": "0.19.39",
-    "zone.js": "^0.6.25"
+    "zone.js": "^0.6.25",
+    "typings": "^1.4.0"
   },
   "devDependencies": {
     "concurrently": "^3.0.0",
