--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "systemjs": "0.19.39",
     "zone.js": "^0.6.25",
     "typings": "^1.4.0",
-    "concurrently": "^3.0.0"
+    "concurrently": "^3.0.0",
+    "lite-server": "^2.2.2"
   },
   "devDependencies": {
     "concurrently": "^3.0.0",
