--- a/package.json
+++ b/package.json
@@ -38,17 +38,17 @@
     "angular2-fontawesome": "~0.7.0",
     "angular2-logger": "^0.5.1",
     "bootstrap": "^4.0.0-alpha.4",
+    "concurrently": "^3.0.0",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "lite-server": "^2.2.2",
     "ng2-bs3-modal": "^0.10.4",
     "reflect-metadata": "^0.1.8",
     "rxjs": "5.0.0-beta.12",
     "sarlacc-js-client": "1.0.4",
     "systemjs": "0.19.39",
-    "zone.js": "^0.6.25",
     "typings": "^1.4.0",
-    "concurrently": "^3.0.0",
-    "lite-server": "^2.2.2"
+    "zone.js": "^0.6.25"
   },
   "devDependencies": {
     "concurrently": "^3.0.0",
