link to sarlacc

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,10 @@
     "experimentalDecorators": true,
     "removeComments": false,
     "noImplicitAny": true,
-    "suppressImplicitAnyIndexErrors": true
+    "suppressImplicitAnyIndexErrors": true,
+    "typeRoots": [
+      "typings/global",
+      "typings/modules"
+    ]
   }
 }
