--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "QuickStart package.json from the documentation, supplemented with testing support",
   "scripts": {
     "start": "tsc && concurrently \"tsc -w\" \"lite-server\" ",
+    "startProd": "tsc && concurrently \"tsc -w\" \"http-server -p 3000\" ",
     "docker-build": "docker build -t ng2-quickstart .",
     "docker": "npm run docker-build && docker run -it --rm -p 3000:3000 -p 3001:3001 ng2-quickstart",
     "pree2e": "npm run webdriver:update",
@@ -47,7 +48,8 @@
     "systemjs": "0.19.39",
     "typings": "^1.4.0",
     "zone.js": "^0.6.25",
-    "sarlacc-angular-client": "1.0.1"
+    "sarlacc-angular-client": "1.0.1",
+    "http-server": "^0.9.0"
   },
   "devDependencies": {
     "concurrently": "^3.0.0",
