--- a/package.json
+++ b/package.json
@@ -44,10 +44,11 @@
     "lite-server": "^2.2.2",
     "reflect-metadata": "^0.1.8",
     "rxjs": "5.0.0-beta.12",
+    "sarlacc-angular-client": "1.0.1",
+    "spa-http-server": "^0.9.0",
     "systemjs": "0.19.39",
     "typings": "^1.4.0",
-    "zone.js": "^0.6.25",
-    "sarlacc-angular-client": "1.0.1"
+    "zone.js": "^0.6.25"
   },
   "devDependencies": {
     "concurrently": "^3.0.0",
